--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: 
-  password: 
+  username: geofrey
+  password: mjuninunda
   port: 3306
   host: localhost
 
